fix: e2e tests and test plan